fixed bug with form on mobile
there was an issue where the form would shrink if popped the keyboard . adding an empty row apparently fixes it i have no idea why honestly. it works.

--- a/KittyHaven/include/main.css
+++ b/KittyHaven/include/main.css
@@ -367,9 +367,6 @@ textarea:focus{
 }
 
 
-.catForm textarea#description {
-    margin-left: 15px;
-}
 
 .errorTxt{
     color: #f32121;
